--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>1.509</version><!-- which version of Jenkins is this plugin built against? -->
+    <version>1.609</version><!-- which version of Jenkins is this plugin built against? -->
   </parent>
 
   <artifactId>deployment-notification</artifactId>
@@ -33,8 +33,13 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>promoted-builds</artifactId>
-      <version>2.7</version>
+      <version>2.15</version>
       <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.jenkins-ci.plugins.workflow</groupId>
+      <artifactId>workflow-api</artifactId>
+      <version>1.2</version>
     </dependency>
   </dependencies>
 
